# pinyin-typing

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: claude.yml  pr-validation.yml
app/: api.py  db.py  srs.py
app/data/: mappings.json
docs/plans/: 2026-02-10-pinyin-learning-system-design.md  2026-02-10-pinyin-learning-system-plan.md
static/: app.js  index.html  manifest.json  style.css  sw.js
tests/: test_api.py  test_db.py  test_mappings.py  test_srs.py
